--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "underscore": "~1.5.2",
     "request": "~2.27.0",
     "cheerio": "~0.12.2",
-    "iconv-lite": "~0.2.11"
+    "iconv-lite": "~0.2.11",
+    "mongodb": "latest"
   }
 }
