transfering services/normalize-anp-crawled.js from otto-web to otto.js, adding model (schema and db utils). Creating a collection to receive normalized address and its coordinate and implementing it in anpcrawler.js

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cheerio": "~0.12.2",
     "iconv-lite": "~0.2.11",
     "mongodb": "latest",
-    "node-rest-client": "latest"
+    "node-rest-client": "latest",
+    "mongoose": "latest"
   }
 }
