--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-rest-client": "latest",
     "mongoose": "latest",
     "q": "~0.9.7",
-    "ttys": "0.0.3"
+    "ttys": "0.0.3",
+    "qconf": "~2.2.0"
   }
 }
